@@ -2,6 +2,7 @@
     o Renamed to ::Firefox
     . Added ->save_url for downloading content to disk
     . Added ->save_document for downloading the current document to disk
+    . Make ->synchronize and ->click not automatically fetch the response
 
 0.11 20091126
     . Implement real HTTP response codes instead of the faked
